[gd_scene load_steps=5 format=3 uid="uid://bi027ox8yiju"]

[ext_resource type="Texture2D" uid="uid://b7gnvjjjs4ngn" path="res://assets/images/reload/reload_back.png" id="1_t7heg"]
[ext_resource type="Script" uid="uid://cvp58mt60ccxm" path="res://scripts/vfx/reload/reload__progress_bar.gd" id="1_wtoi1"]
[ext_resource type="Texture2D" uid="uid://cew5fsfv33yl3" path="res://assets/images/reload/reload_front.png" id="2_wtoi1"]
[ext_resource type="Script" uid="uid://c0aipoimc2hru" path="res://addons/great_games_library/resources/InstanceResource/PoolNode.gd" id="4_jk884"]

[node name="ReloadProgressBar" type="Node2D" node_paths=PackedStringArray("pool_node")]
script = ExtResource("1_wtoi1")
pool_node = NodePath("PoolNode")

[node name="Bottom" type="Sprite2D" parent="."]
texture = ExtResource("1_t7heg")
offset = Vector2(0, 0.5)

[node name="LeftPos" type="Marker2D" parent="Bottom"]
position = Vector2(-10, 0)

[node name="RightPos" type="Marker2D" parent="Bottom"]
position = Vector2(10, 0)

[node name="Top" type="Sprite2D" parent="."]
texture = ExtResource("2_wtoi1")
offset = Vector2(0.5, 0.5)

[node name="PoolNode" type="Node" parent="." node_paths=PackedStringArray("ready_nodes")]
script = ExtResource("4_jk884")
ready_nodes = [NodePath("..")]
metadata/_custom_type_script = "uid://c0aipoimc2hru"
